제안서 - 1. 과제의 필요성 작성

--- a/제안서.md
+++ b/제안서.md
@@ -3,14 +3,25 @@
 Abstract를 작성한 후에, 서론을 작성합니다.
 서론에는 왜 이 작품(과제, 논문, 연구)를 하면 좋을지?
 ```
-## Machine learning methods
-## Intrinsically disordered proteins(IDPs)
+
+컴퓨터 공학 기술의 발전은 우리가 세계를 이해하고 문제를 해결하는 방식에 큰 변화를 가져왔다. 특히 과학 분야에서는 컴퓨터를 적극 활용하며 컴퓨터를 이용한 새로운 연구방법이 탄생했고, 이전에는 볼 수 없었던 세계에 접근하여 새로운 발견을 이끌어 내거나 복잡한 문제를 다룰 수 있게 되는 등 과학의 발전에도 크게 이바지하고 있다. 컴퓨터의 연산 처리 능력의 증가는 대량의 실험 데이터의 수집과 분석을 가능하도록 하였고, 더 나아가 인공지능과 머신러닝 방법은 과학적 문제에 대한 고차원적인 이해를 도와 과학자들이 보다 깊고 복잡한 연구를 수행할 수 있게 하였다.
+
+컴퓨터를 활용한 연구방법은 분자 수준에서 생물 내 복잡한 시스템을 이해하는 데에도 큰 도움을 주고 있다. 특히 단백질은 생물체의 구조 형성 뿐만 아니라 생화학적 효소나 세포 사이에 신호 전달 등의 생물체의 생체 활동에 핵심적인 역할을 수행하는 것으로 알려져 있다. 따라서 과학자들은 복잡한 생체 시스템을 이해하는 데 있어 단백질이 중요한 열쇠라고 판단하여 단백질 연구에 많은 관심을 기울이고 있다. 특히 단백질의 구조를 규명하는 것은 단백질의 기능과 상호작용을 이해하는 데에 큰 도움을 주어 분자 생물학과 생물물리학 연구에 많은 기여를 하고 있다.
+
+역사적으로 X선 회절법과, 핵자기 공명법 (NMR) 등의 실험적 방법으로 단백질의 입체 구조에 대한 고해상도 정보를 얻어왔다. 하지만 단백질의 생화학적 기능을 이해하기 위해서는 구조뿐만 아니라 동역학적인 성질에 대한 정보가 필요하다. 위의 실험적 방법만으로는 단백질의 동역학적인 특성을 파악하는 데에 한계가 있기 때문에, 과학자들은 분자의 물리적인 성질을 재현한 분자 동역학 시뮬레이션 (molecular dynamics simulation, MD)을 활용하여 실험적으로 볼 수 없는 분자 수준의 현상을 연구하고 단백질의 기능을 알아내는 데에 필요한 정보를 얻고 있다.
+
+컴퓨터 시뮬레이션을 이용한 단백질 연구 방법은 단백질의 동역학적 특성을 밝히는데 널리 쓰이고 있지만 막대한 컴퓨팅 리소스가 요구되어 연구할 수 있는 대상에 크게 제약이 있다. 컴퓨터 시뮬레이션의 한계를 극복하고 상대적으로 적은 자원으로 단백질을 연구하기 위해 다양한 접근 방법이 등장하고 있는데, 근래에는 데이터를 기반으로한 머신러닝 테크닉을 적용한 연구가 활발히 이루어지고 있다. 딥마인드 사의 AlphaFold2와 같은 모델은 아미노산 서열로부터 단백질의 3D 구조를 원자 수준의 높은 정확도로 예측하여 과학계에 충격을 주기도 하였다. 그러나 AlaphaFold2와 같이 실험적으로 결정된 단백질의 구조를 예측하는 모델은 단백질의 동역학적 특성을 담지 못한다는 한계점이 있어 AlphaFold2와는 다른 접근방법에 대한 연구가 진행 중이다.
+
+본 과제에서는 단백질의 동역학적 특성을 분석할 수 있는 머신 러닝 기법을 공부하고 직접 MD 시뮬레이션을 통해 얻은 데이터를 모델에 학습시켜 보는 것을 목표로 한다. 
+
 # 2. 선행연구 및 기술현황 (2p)
 ```
 작품/논문과 관련된 연구와 기술현황을 작성합니다.
 과제 제안목표와 방향을 기술합니다.
 ```
 [[Direct generation of protein conformational ensembles via machine learning]]
+
+
 
 
 # 3. 작품/논문 전체 진행계획 및 구성 (2p)
@@ -27,3 +38,6 @@ Abstract를 작성한 후에, 서론을 작성합니다.
 
 # 5. 기타
 # 6. 참고문헌
+1. Baker, D. and et al. Protein structure prediction and structural genomics. Science. 2001;294 (5540): 93–96.
+2.  Dror, R. O., Dirks, R. M., Grossman, J. P., Xu, H. & Shaw, D. E. Bio- molecular simulation: a computational microscope for molecular biology. Annu. Rev. Biophys. 41, 429–452 (2012).
+3. Jumper, J. et al. Highly accurate protein structure prediction with AlphaFold. Nature 596, 583–589 (2021)
