2. 선행연구 및 기술현황 작성

--- a/제안서.md
+++ b/제안서.md
@@ -3,12 +3,15 @@
 Abstract를 작성한 후에, 서론을 작성합니다.
 서론에는 왜 이 작품(과제, 논문, 연구)를 하면 좋을지?
 ```
+## 초록
+컴퓨터 공학 기술의 발전은 과학 연구에 큰 변화를 가져왔으며, 특히 분자 수준에서 생물 내 복잡한 시스템을 이해하는 데에 큰 도움을 주고 있다. 단백질은 생물체의 구조 형성과 생화학적 효소 및 세포 사이의 신호 전달 등의 생체 활동에 핵심적인 역할을 수행하며, 단백질의 구조를 규명하는 것은 분자 생물학과 생물물리학 연구에 많은 기여를 하고 있다. 그러나 기존의 실험적 방법만으로는 단백질의 동역학적인 특성을 파악하는 데에 한계가 있어, 분자 동역학 시뮬레이션과 머신러닝 기술을 활용한 연구가 활발히 이루어지고 있다. 본 과제에서는 단백질의 동역학적 특성을 분석할 수 있는 머신 러닝 기법을 공부하고, 직접 MD 시뮬레이션을 통해 얻은 데이터를 모델에 학습시켜 보는 것을 목표로 한다.
 
+## 서론
 컴퓨터 공학 기술의 발전은 우리가 세계를 이해하고 문제를 해결하는 방식에 큰 변화를 가져왔다. 특히 과학 분야에서는 컴퓨터를 적극 활용하며 컴퓨터를 이용한 새로운 연구방법이 탄생했고, 이전에는 볼 수 없었던 세계에 접근하여 새로운 발견을 이끌어 내거나 복잡한 문제를 다룰 수 있게 되는 등 과학의 발전에도 크게 이바지하고 있다. 컴퓨터의 연산 처리 능력의 증가는 대량의 실험 데이터의 수집과 분석을 가능하도록 하였고, 더 나아가 인공지능과 머신러닝 방법은 과학적 문제에 대한 고차원적인 이해를 도와 과학자들이 보다 깊고 복잡한 연구를 수행할 수 있게 하였다.
 
 컴퓨터를 활용한 연구방법은 분자 수준에서 생물 내 복잡한 시스템을 이해하는 데에도 큰 도움을 주고 있다. 특히 단백질은 생물체의 구조 형성 뿐만 아니라 생화학적 효소나 세포 사이에 신호 전달 등의 생물체의 생체 활동에 핵심적인 역할을 수행하는 것으로 알려져 있다. 따라서 과학자들은 복잡한 생체 시스템을 이해하는 데 있어 단백질이 중요한 열쇠라고 판단하여 단백질 연구에 많은 관심을 기울이고 있다. 특히 단백질의 구조를 규명하는 것은 단백질의 기능과 상호작용을 이해하는 데에 큰 도움을 주어 분자 생물학과 생물물리학 연구에 많은 기여를 하고 있다.
 
-역사적으로 X선 회절법과, 핵자기 공명법 (NMR) 등의 실험적 방법으로 단백질의 입체 구조에 대한 고해상도 정보를 얻어왔다. 하지만 단백질의 생화학적 기능을 이해하기 위해서는 구조뿐만 아니라 동역학적인 성질에 대한 정보가 필요하다. 위의 실험적 방법만으로는 단백질의 동역학적인 특성을 파악하는 데에 한계가 있기 때문에, 과학자들은 분자의 물리적인 성질을 재현한 분자 동역학 시뮬레이션 (molecular dynamics simulation, MD)을 활용하여 실험적으로 볼 수 없는 분자 수준의 현상을 연구하고 단백질의 기능을 알아내는 데에 필요한 정보를 얻고 있다.
+역사적으로 X선 회절법과, 핵자기 공명법 (NMR) 등의 실험적 방법으로 단백질의 입체 구조에 대한 고해상도 정보를 얻어왔다. 하지만 단백질의 생화학적 기능을 이해하기 위해서는 구조뿐만 아니라 동역학적인 성질에 대한 정보가 필요하다. 위의 실험적 방법만으로는 단백질의 동역학적인 특성을 파악하는 데에 한계가 있기 때문에, 과학자들은 분자의 물리적인 성질을 재현한 분자 동역학 시뮬레이션 (molecular dynamics simulation, MD)을 활용하여 실험적으로 볼 수 없는 분자 수준의 현상을 연구하고 단백질의 기능을 알아내는 데에 필요한 정보를 얻고 있다. [1,2]
 
 컴퓨터 시뮬레이션을 이용한 단백질 연구 방법은 단백질의 동역학적 특성을 밝히는데 널리 쓰이고 있지만 막대한 컴퓨팅 리소스가 요구되어 연구할 수 있는 대상에 크게 제약이 있다. 컴퓨터 시뮬레이션의 한계를 극복하고 상대적으로 적은 자원으로 단백질을 연구하기 위해 다양한 접근 방법이 등장하고 있는데, 근래에는 데이터를 기반으로한 머신러닝 테크닉을 적용한 연구가 활발히 이루어지고 있다. 딥마인드 사의 AlphaFold2와 같은 모델은 아미노산 서열로부터 단백질의 3D 구조를 원자 수준의 높은 정확도로 예측하여 과학계에 충격을 주기도 하였다. 그러나 AlaphaFold2와 같이 실험적으로 결정된 단백질의 구조를 예측하는 모델은 단백질의 동역학적 특성을 담지 못한다는 한계점이 있어 AlphaFold2와는 다른 접근방법에 대한 연구가 진행 중이다.
 
@@ -21,7 +24,25 @@ Abstract를 작성한 후에, 서론을 작성합니다.
 ```
 [[Direct generation of protein conformational ensembles via machine learning]]
 
+## Jumper, J. et al. Highly accurate protein structure prediction with AlphaFold. Nature 596, 583–589 (2021) [3]
 
+단백질의 생화학적 기능을 이해하기 위해 단백질의 구조를 이해하는 것은 중요하다. 하지만 X선 회절법과 핵자기 공명법 등의 실험적 방법으로 단백질의 3D 구조를 알아내는 것은 수 년의 시간과 고가의 중장비를 요하는 어려운 작업이다. 현재까지 약 10만 종류의 단백질의 구조가 실험적으로 밝혀졌지만, 인간의 신체에 존재하는 30만 가지의 단백질과 지구 상에 존재하는 3억 가지의 단백질에 비하면 턱없이 적은 숫자다. [4]
+
+이러한 문제를 해결하기 위해 컴퓨터를 활용한 단백질 구조 예측 연구가 활발히 이루어지고 있다. 세계적인 단백질 연구 그룹들이 개발한 예측모델의 정확도를 경쟁하는 단백질 구조 예측 대회 (CASP- Critical Assessment of protein Structure Prediction)도 2년을 주기로 열리고 있다. 위 논문은 2020년에 열린 CASP 14 (Critical Assessment of protein Structure Prediction) Regular Target 부문에서 압도적인 성적으로 우승한 알파폴드2 모델에 대한 논문이다. 
+
+알파폴드는 알려진 10만 가지의 단백질 구조 정보를 학습하여 유사한 단백질 구조에 대한 정보 없이 아미노산 서열로부터 단백질의 3D 구조를 원자 수준의 높은 정확도로 예측하는데 성공했다. 알파폴드는 Multiple Sequence Alignment 정보와 Template 정보를 인풋으로 받는 트랜스포머 형태의 구조예측 모델을 제시, 물리화학적인 정보를 모델이 스스로 학습할 수 있도록 다양한 종류의 어텐션 모듈과 손실함수를 도입하고, 다수의 최신 인공지능 학습 기법들을 반영하여 만들어졌다. 
+
+## Direct generation of protein conformational ensembles via machine learning[7]
+
+알파폴드와 같은 구조예측 모델은 가장 안정된 하나의 단백질의 3D 구조를 산출하기 때문에, 동역학적 정보를 얻을 수 없다. 단백질의 동역학적인 성질을 얻기 위해서는 단백질의 여러 입체형태의 앙상블 (conformational ensemble)에 대한 정보가 필요하지만 여러 입체형태의 상태 (state)를 실험적으로 관찰하기는 힘들고, 실험적으로 밝혀진 구조 데이터를 학습한 모델도 앙상블을 구하는데 적합하지 않다.
+
+분자 동역학 시뮬레이션은 단백질의 입체형태 앙상블을 구하는 가장 일반적인 방법 중 하나이지만 막대한 컴퓨팅 리소스가 요구된다는 단점이 있다. 근래에는 보다 적은 리소스와 시간으로 단백질의 동역학적 특성을 알아내는 방법으로 머신러닝을 활용하는 기법이 부상하고 있다. 위 논문은 시뮬레이션을 통해 구한 앙상블 데이터를 딥러닝 모델에 학습시켜 단백질의 입체형태 앙상블을 생성하는 모델에 대해 다룬다.
+
+위 논문은 비정형 단백질 (Intrinsically disordered protein, IDP)을 학습 대상으로 선정했다. IDP는 구조가 알려진 단백질과는 달리 안정된 입체 구조가 없는 단백질을 일컫는다. IDP에 대하여 실험적으로 알아낼 수 있는 구조 정보와 동역학적 정보는 극히 한정적이다. 안정된 구조가 없기 때문에 알파폴드와 같은 모델로 학습하거나 추론하기에도 부적합하고[6], 장시간동안 많은 컴퓨팅 리소스를 동원하는 분자 동역학 시뮬레이션에 의존해왔다. 위 연구에서 제시한 새로운 모델 idpGAN은 머신러닝 기법을 활용하여 IDP에 대한 동역학적 정보를 정확하면서도 빠르게 생성할 수 있다.
+
+idpGAN은 분자 동역학 시뮬레이션으로 얻은 단백질 앙상블 데이터를 적대적 생성 네트워크 (GAN)에 학습시킨 모델이다. 단백질 서열 정보를 조건으로 받아 단백질 앙상블 공간을 GAN이 재현할 수 있다고 주장한다. 후속 연구로 GAN이 아닌 Diffusion Model 네트워크를 이용한 연구 자료도 아카이브에 올라와있다.[8]
+
+![[Pasted image 20240322000331.png]]
 
 
 # 3. 작품/논문 전체 진행계획 및 구성 (2p)
@@ -34,6 +55,9 @@ Abstract를 작성한 후에, 서론을 작성합니다.
 3. 2 제목
 내용
 ```
+초록
+1. 서론
+	1. 
 # 4. 기대효과 및 개선방향 (1p)
 
 # 5. 기타
@@ -41,3 +65,8 @@ Abstract를 작성한 후에, 서론을 작성합니다.
 1. Baker, D. and et al. Protein structure prediction and structural genomics. Science. 2001;294 (5540): 93–96.
 2.  Dror, R. O., Dirks, R. M., Grossman, J. P., Xu, H. & Shaw, D. E. Bio- molecular simulation: a computational microscope for molecular biology. Annu. Rev. Biophys. 41, 429–452 (2012).
 3. Jumper, J. et al. Highly accurate protein structure prediction with AlphaFold. Nature 596, 583–589 (2021)
+4. https://deepmind.google/technologies/alphafold/
+5. Holehouse, A.S., Kragelund, B.B. The molecular basis for cellular function of intrinsically disordered protein regions. _Nat Rev Mol Cell Biol_ **25**, 187–211 (2024).
+6. Kiersten M. Ruff, Rohit V. Pappu, AlphaFold and Implications for Intrinsically Disordered Proteins, Journal of Molecular Biology, Volume 433, Issue 20, (2021)
+7. Janson, G., Valdes-Garcia, G., Heo, L. _et al._ Direct generation of protein conformational ensembles via machine learning. _Nat Commun_ **14**, 774 (2023).
+8. Giacomo Janson, Michael Feig, Transferable deep generative modeling of intrinsically disordered protein conformations, bioRxiv 2024.02.08.579522; doi: https://doi.org/10.1101/2024.02.08.579522 
